# game

./: .gitignore  CMakeLists.txt  README.md  depend_null.txt  todo list.md
SFML/lib/: libsfml-graphics.so.2.4.2  libsfml-network.so.2.4.2  libsfml-window.so.2.4.2
lib/SFML/lib/: libsfml-audio.so.2.4.2  libsfml-system.so.2.4.2
resources/sound/: desktop.ini
src/: Draw.cpp  Draw.h  FlyingObject.cpp  FlyingObject.h  GameControl.cpp  GameControl.h  GameEvent.cpp  GameEvent.h  Sounds.cpp  Sounds.h  Textures.cpp  Textures.h  main.cpp
